@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.3 2009/08/09 11:23:02 sno Exp $
-
-SHA1 (ExtUtils-Install-1.54.tar.gz) = a32c1168b3ac47e10110d7ad5f780c961b54216c
-RMD160 (ExtUtils-Install-1.54.tar.gz) = 1703beb8641c8fcfe1a937193e768e47ade0313b
-Size (ExtUtils-Install-1.54.tar.gz) = 67337 bytes
